# fantasy-football-hub

./: .env.example  ARCHITECTURE.md  DESIGN_CONCEPTS.md  PHASES.md  README.md  USER_STORIES.md  docker-compose.yml
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: architecture.json  design_concepts.json  phases.json  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_phase1_auth_league.py  002_phase3_credentials_playermap.py  003_draft_models.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  draft.py  espn.py  health.py  leagues.py  notifications.py  oauth.py  sleeper.py  team.py  users.py  yahoo.py
backend/app/core/: cache.py  config.py  database.py  deps.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/data/: nfl_stadiums.py  player_cross_map_seed.py
backend/app/models/: __init__.py  audit.py  credential.py  draft.py  league.py  player.py  user.py
backend/app/services/: auth_service.py  credential_service.py  draft_service.py  email_service.py  espn_client.py  espn_service.py  league_service.py  lineup_optimizer.py  player_id_mapper.py  projection_service.py  sleeper_client.py  trade_evaluator.py  waiver_ranker.py  weather_service.py  yahoo_client.py  yahoo_service.py
backend/app/sockets/: draft_namespace.py
backend/app/workers/: league_purge.py
backend/tests/: conftest.py  test_auth.py  test_auth_service.py  test_cache_and_stadiums.py  test_credential_service.py  test_draft_models.py  test_draft_namespace.py  test_draft_service.py  test_espn_client.py  test_espn_routes.py  test_league_service.py  test_leagues.py  test_lineup_optimizer.py  test_oauth.py  test_player_id_mapper.py  test_projection_service.py  test_rate_limit.py  test_sleeper.py  test_team_routes.py  test_users.py  test_waiver_ranker.py  test_weather_service.py  test_yahoo_client.py  test_yahoo_routes.py
backend/tests/fixtures/: espn_league.json  fc_values_sample.json  sleeper_players_sample.json  yahoo_league.json
backend/workers/: tasks.py
e2e/: package.json  playwright.config.ts
e2e/fixtures/: lineup.json  player-stats.json  standings.json  team-my-multi-league.json  team-my.json  trade.json  waiver-trend.json  waiver.json
e2e/tests/: helpers.ts  uat-1-lineup.spec.ts  uat-10-draft-reconnect.spec.ts  uat-10-draft-room.spec.ts  uat-11-draft-flow.spec.ts  uat-2-player-drawer.spec.ts  uat-3-compare-panel.spec.ts  uat-4-league-switcher.spec.ts  uat-5-waiver-card.spec.ts  uat-6-arq-worker.spec.ts  uat-7-espn-connect.spec.ts  uat-8-yahoo-connect.spec.ts  uat-9-rate-limit.spec.ts
frontend/: .eslintrc.cjs  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mockups/: 01-league-connector.html  02-team-manager.html  03-draft-room.html  04-trade-evaluator.html  index.html
(+164 files in other folders)
