[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-football-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-socketio>=5.11.0",
    "redis[hiredis]>=5.0.0",
    "arq>=0.26.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",
    "PyJWT>=2.13.0",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "fastapi-mail>=1.6.5",
    "icalendar>=7.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
