[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-football-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-socketio>=5.16.3",
    "redis[hiredis]>=8.0.1",
    "arq>=0.28.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "PyJWT>=2.13.0",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "fastapi-mail>=1.6.5",
    "icalendar>=7.2.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=5.0.0,<6",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "sentry-sdk[fastapi]>=2.66.0",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.services.email_service",
    "app.services.weather_service",
    "app.services.projection_service",
    "app.services.league_service",
    "app.services.yahoo_service",
    "app.services.espn_service",
    "app.services.espn_client",
    "app.services.draft_service",
    "app.sockets.draft_namespace",
    "app.api.v1.notifications",
    "app.api.v1.draft",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
